# caerus-dike

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  build_all.sh  clean.sh  demo.sh  init_tpch.sh  licenses.txt  run.sh  run_dike.sh  run_hdfs.sh  run_s3.sh  start.sh  start_hdfs.sh  start_s3.sh  stop.sh
benchmark/tpch/: README.md  build.sh  build_csv.sh  build_tbl.sh  build_tbl_100g.sh  build_tpch.sh  clean.sh  copy_queries.sh  diff_tpch.py  format_csv.py  limit.txt  parquet.py  parse_logs.py  run_all_script.sh  run_tpch.py  run_tpch.sh  run_tpch_all.sh  run_tpch_check.sh  run_tpch_init.sh  spark_create_tables.txt  tbl2csv.py  test_examples.txt  tips.txt  tpch_nfs_setup.txt  tpch_tx_times.sh  vethfinder.sh
dike-sdk-java/: build-java-s3-client.txt  build_test.sh  debug_test.sh  run_test.sh  tips.txt
dikeS3/: CMakeLists.txt  dikeS3.cpp  run_dikeS3.sh
doc/: Dike_Design_and_Architecture.docx
mc/: build_mc.sh  debug_mc.sh  run_mc.sh  run_mc_test.sh  run_mc_trace.sh  tips.txt
mc/docker/: Dockerfile.mc_build  Dockerfile.mc_debug  Dockerfile.mc_run  build-mc-entrypoint.sh  build.sh  build_dockers.sh  (+2 more)
minio/: build_server.sh  debug_server.sh  run_dike_server.sh  run_server.sh  start.sh  stop.sh
pushdown-datasource/: build.sh  clean.sh  test.sh
s3datasource/: build_s3.sh
spark/: .sbtopts  build.sh  build_spark.sh  enter_build_docker.sh  history-server.properties  spark.config  spark.config.master  spark.config.template  spark.config.worker  start-host.sh  start.sh  start_history_server.sh  stop.sh  stop_spark.sh
spark-select/: build.sh
(+110 files in other folders)
